# entropy-trading-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
config/: settings.yaml
docs/: API.md
entropylab/: __init__.py
examples/: quickstart.ipynb
src/entropy/: analyzer.py  metrics.py
src/entropy_cli/: backtest.py  service.py
src/market/: pipeline.py  types.py
src/proof/: capsule.py  db.py
src/risk/: manager.py
src/services/: api.py  metrics.py
src/trading/: backtest.py  broker.py  live.py
src/utils/: arrays.py  settings.py
tests/: test_entropy.py  test_service_health.py
